Dark mode styling + fixed incorrect symbol bug

--- a/static/styles.css
+++ b/static/styles.css
@@ -1,6 +1,6 @@
 
 body {
-    background-color: #FFF; /* This sets the background color to blue */
+    background-color: #222; 
     background-size: cover;
     background-image: url('path_to_paper_texture.jpg') center center fixed;
 }
@@ -10,6 +10,8 @@ body {
     height: 20rem;
     margin-bottom: 20px;
     margin-left: 30px; 
+    background-color: #5d5d5d5d!important;
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.5);
 }
 #plotly-div2 {
     width: 40rem;
@@ -531,4 +533,28 @@ footer {
   font-size: 0.7rem;
   margin-top: 0;
   margin-left: 0;
+}
+
+.bg-custom{
+  background-image: url('../static/bg2.png');
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-position: center;
+  z-index: -1;
+  position: relative;
+  mix-blend-mode: multiply;
+  height: 100vh;
+}
+.bg-custom::before{
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  z-index: -1;
+  mix-blend-mode: multiply;
+
 }
